Fixed comma white spaces on event list Conflicts: 	war/css/agilecrm.css

--- a/war/css/agilecrm.css
+++ b/war/css/agilecrm.css
@@ -1754,3 +1754,45 @@ display:block;
 overflow:hidden;
 text-overflow:ellipsis;
 }
+
+
+.inbound-help-text, .inbound-help-text:hover
+{
+	text-decoration: none;
+	border-bottom: 1px dashed #b2b0b1;
+	color: #b2b0b1
+}
+
+#activityReportsForm ul.ms-list{
+	height:150px;
+}
+.custom-fields-table tbody tr:hover td:nth-child(n+2) div {
+	display: block!important;
+}
+.custom-fields-table tbody tr:hover td:last-child div {
+	display: block!important;
+}
+
+/** call script rules sorting **/
+.csr-sortable > tr.pseduo-row td {
+	border-top: 0px #f5f5f5!important;
+	background-color: #f5f5f5!important;
+}
+.csr-sortable > tr.pseduo-row td input[type="checkbox"] {
+	display: none;
+}
+.csr-sortable tr:hover td:last-child div {
+	display: block!important;
+}
+.ctx {
+	width: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+.ctx span
+{
+	margin-left:-4px;
+}
+}
+
